--- a/joke/static/joke/css/comments.css
+++ b/joke/static/joke/css/comments.css
@@ -1,10 +1,11 @@
-{#  Comment styling #}
+/* {#  Comment styling #} */
+
+
 .scrollable{
     overflow-y: scroll; 
     height: 70%; 
     /*position: absolute;*/
 }
-
 .comments-details button.btn.dropdown-toggle,
 .comments-details .total-comments {
     font-size: 18px;
@@ -156,4 +157,4 @@ input[type=text]{
   display: block;
   margin-left: 0px;
 }
-}
+
